export const snapshot = {};

snapshot[`nav plugin 1`] = `6`;

snapshot[`nav plugin 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`nav plugin 3`] = `
[
]
`;

snapshot[`nav plugin 4`] = `
{
  content: '<!DOCTYPE html>
<html>
  <head>
    <title>Docs</title>
  </head>

  <body>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        
        <li><a href="/">Home</a></li>
        
        <li><a href="/docs/">Docs</a></li>
        
      </ul>
    </nav>

    <h1>Docs</h1>

    <nav>
      <ul>
      
        <li>
          
<a href="/docs/">Docs</a>



<ul>
  
  <li>
    
<a href="/docs/about-docs/">About docs</a>




  </li>
  
  <li>
    
<a href="/docs/pages/">About pages</a>



<ul>
  
  <li>
    
<a href="/docs/pages/first/">Pages first</a>




  </li>
  
  <li>
    
<a href="/docs/pages/second/">Pages second</a>




  </li>
  
</ul>


  </li>
  
</ul>


        </li>
      
      </ul>
    </nav>
  </body>
</html>',
  data: {
    children: false,
    content: "",
    date: 1970-01-01T00:00:00.000Z,
    layout: "main.njk",
    mergedKeys: {
      tags: "stringArray",
    },
    nav: Nav {},
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Docs",
    url: "/docs/",
  },
  dest: {
    ext: ".html",
    path: "/docs/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/docs",
    remote: undefined,
    slug: "docs",
  },
}
`;

snapshot[`nav plugin 5`] = `
{
  content: '<!DOCTYPE html>
<html>
  <head>
    <title>About docs</title>
  </head>

  <body>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        
        <li><a href="/">Home</a></li>
        
        <li><a href="/docs/">Docs</a></li>
        
        <li><a href="/docs/about-docs/">About docs</a></li>
        
      </ul>
    </nav>

    <h1>About docs</h1>

    <nav>
      <ul>
      
        <li>
          
<a href="/docs/">Docs</a>



<ul>
  
  <li>
    
<a href="/docs/about-docs/">About docs</a>




  </li>
  
  <li>
    
<a href="/docs/pages/">About pages</a>



<ul>
  
  <li>
    
<a href="/docs/pages/first/">Pages first</a>




  </li>
  
  <li>
    
<a href="/docs/pages/second/">Pages second</a>




  </li>
  
</ul>


  </li>
  
</ul>


        </li>
      
      </ul>
    </nav>
  </body>
</html>',
  data: {
    children: false,
    content: "",
    date: 1970-01-01T00:00:00.000Z,
    layout: "main.njk",
    mergedKeys: {
      tags: "stringArray",
    },
    nav: Nav {},
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "About docs",
    url: "/docs/about-docs/",
  },
  dest: {
    ext: ".html",
    path: "/docs/about-docs/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/docs/about-docs",
    remote: undefined,
    slug: "about-docs",
  },
}
`;

snapshot[`nav plugin 6`] = `
{
  content: '<!DOCTYPE html>
<html>
  <head>
    <title>About pages</title>
  </head>

  <body>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        
        <li><a href="/">Home</a></li>
        
        <li><a href="/docs/">Docs</a></li>
        
        <li><a href="/docs/pages/">About pages</a></li>
        
      </ul>
    </nav>

    <h1>About pages</h1>

    <nav>
      <ul>
      
        <li>
          
<a href="/docs/">Docs</a>



<ul>
  
  <li>
    
<a href="/docs/about-docs/">About docs</a>




  </li>
  
  <li>
    
<a href="/docs/pages/">About pages</a>



<ul>
  
  <li>
    
<a href="/docs/pages/first/">Pages first</a>




  </li>
  
  <li>
    
<a href="/docs/pages/second/">Pages second</a>




  </li>
  
</ul>


  </li>
  
</ul>


        </li>
      
      </ul>
    </nav>
  </body>
</html>',
  data: {
    children: false,
    content: "",
    date: 1970-01-01T00:00:00.000Z,
    layout: "main.njk",
    mergedKeys: {
      tags: "stringArray",
    },
    nav: Nav {},
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "About pages",
    url: "/docs/pages/",
  },
  dest: {
    ext: ".html",
    path: "/docs/pages/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/docs/pages",
    remote: undefined,
    slug: "pages",
  },
}
`;

snapshot[`nav plugin 7`] = `
{
  content: '<!DOCTYPE html>
<html>
  <head>
    <title>Pages first</title>
  </head>

  <body>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        
        <li><a href="/">Home</a></li>
        
        <li><a href="/docs/">Docs</a></li>
        
        <li><a href="/docs/pages/">About pages</a></li>
        
        <li><a href="/docs/pages/first/">Pages first</a></li>
        
      </ul>
    </nav>

    <h1>Pages first</h1>

    <nav>
      <ul>
      
        <li>
          
<a href="/docs/">Docs</a>



<ul>
  
  <li>
    
<a href="/docs/about-docs/">About docs</a>




  </li>
  
  <li>
    
<a href="/docs/pages/">About pages</a>



<ul>
  
  <li>
    
<a href="/docs/pages/first/">Pages first</a>




  </li>
  
  <li>
    
<a href="/docs/pages/second/">Pages second</a>




  </li>
  
</ul>


  </li>
  
</ul>


        </li>
      
      </ul>
    </nav>
  </body>
</html>',
  data: {
    children: false,
    content: "",
    date: 1970-01-01T00:00:00.000Z,
    layout: "main.njk",
    mergedKeys: {
      tags: "stringArray",
    },
    nav: Nav {},
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Pages first",
    url: "/docs/pages/first/",
  },
  dest: {
    ext: ".html",
    path: "/docs/pages/first/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/docs/pages/first",
    remote: undefined,
    slug: "first",
  },
}
`;

snapshot[`nav plugin 8`] = `
{
  content: '<!DOCTYPE html>
<html>
  <head>
    <title>Pages second</title>
  </head>

  <body>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        
        <li><a href="/">Home</a></li>
        
        <li><a href="/docs/">Docs</a></li>
        
        <li><a href="/docs/pages/">About pages</a></li>
        
        <li><a href="/docs/pages/second/">Pages second</a></li>
        
      </ul>
    </nav>

    <h1>Pages second</h1>

    <nav>
      <ul>
      
        <li>
          
<a href="/docs/">Docs</a>



<ul>
  
  <li>
    
<a href="/docs/about-docs/">About docs</a>




  </li>
  
  <li>
    
<a href="/docs/pages/">About pages</a>



<ul>
  
  <li>
    
<a href="/docs/pages/first/">Pages first</a>




  </li>
  
  <li>
    
<a href="/docs/pages/second/">Pages second</a>




  </li>
  
</ul>


  </li>
  
</ul>


        </li>
      
      </ul>
    </nav>
  </body>
</html>',
  data: {
    children: false,
    content: "",
    date: 1970-01-01T00:00:00.000Z,
    layout: "main.njk",
    mergedKeys: {
      tags: "stringArray",
    },
    nav: Nav {},
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Pages second",
    url: "/docs/pages/second/",
  },
  dest: {
    ext: ".html",
    path: "/docs/pages/second/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/docs/pages/second",
    remote: undefined,
    slug: "second",
  },
}
`;

snapshot[`nav plugin 9`] = `
{
  content: '<!DOCTYPE html>
<html>
  <head>
    <title>Home</title>
  </head>

  <body>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        
        <li><a href="/">Home</a></li>
        
      </ul>
    </nav>

    <h1>Home</h1>

    <nav>
      <ul>
      
        <li>
          
<a href="/docs/">Docs</a>



<ul>
  
  <li>
    
<a href="/docs/about-docs/">About docs</a>




  </li>
  
  <li>
    
<a href="/docs/pages/">About pages</a>



<ul>
  
  <li>
    
<a href="/docs/pages/first/">Pages first</a>




  </li>
  
  <li>
    
<a href="/docs/pages/second/">Pages second</a>




  </li>
  
</ul>


  </li>
  
</ul>


        </li>
      
      </ul>
    </nav>
  </body>
</html>',
  data: {
    children: false,
    content: "",
    date: 1970-01-01T00:00:00.000Z,
    layout: "main.njk",
    mergedKeys: {
      tags: "stringArray",
    },
    nav: Nav {},
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Home",
    url: "/",
  },
  dest: {
    ext: ".html",
    path: "/index",
  },
  src: {
    asset: undefined,
    ext: ".njk",
    path: "/index",
    remote: undefined,
    slug: "index",
  },
}
`;
